fix layout breakpoints

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 :root {
     --dark: #282828;
     --dark-blue: #141922;
+    --grey: #6D6D6D;
 }
 
 /* ! Regole Reset */
@@ -66,19 +67,18 @@ main.row {
 
 /* ! Header */
 .main-header {
-    color: white;
+    color: var(--grey);
 }
+
+.logo.logo--big {
+    display: none;
+}
+
 
 
 /* ! Toolbar */
 
 /* ! Main Content */
-
-/* -------------------------------------------------------------------------------- */
-/* ! Mid */
-/* -------------------------------------------------------------------------------- */
-@media (min-width: 878px) {}
-
 
 /* -------------------------------------------------------------------------------- */
 /* ! Small */
@@ -90,10 +90,26 @@ main.row {
         flex-basis: 230px;
     }
 
+    /* ! Header */
+    .logo.logo--big {
+        display: block;
+    }
+
+    .logo.logo--small {
+        display: none;
+    }
+
 }
 
+/* -------------------------------------------------------------------------------- */
+/* ! Mid */
+/* -------------------------------------------------------------------------------- */
+@media (min-width: 878px) {}
+
+
+
 
 /* -------------------------------------------------------------------------------- */
-/* ! X-Small */
+/* ! Large */
 /* -------------------------------------------------------------------------------- */
-@media (min-width: 552px) {}
+@media (min-width: 1440px) {}
